--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,6 +2,7 @@
     <h1 class="hero-title" ui-sref="rooms">{{ home.heroTitle }}</h1>
 </section>
 <section class="rooms-list">
-		<div ng-repeat="room in home.rooms" class="chatrooms">
+		<div ng-repeat="room in home.chatRooms" class="chatrooms">
+        {{room.$value}}
 		</div>
 	</section>
