BlocChat Checkpoint 3: COMPLETED

--- a/app/templates/modal.html
+++ b/app/templates/modal.html
@@ -6,7 +6,7 @@
         <h5 class="modal-prompt">Enter a room name</h5>
         <form ng-submit="modal.create()">
           <div class="input-group animated">
-            <input type="text" class="form-control finderBar" ng-model="modal.name">
+            <input type="text" class="form-control finderBar" ng-model="modalInstance.name">
         
           </div>
         </form>
