--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -17,7 +17,7 @@
     </div>
     <div class="messages-body" ng-repeat="message in home.messages">
         <div class="username">{{ message.username }}</div>
-        <div class="timestamp">{{ message.sentAt | date : "shortTime" }}</div>
+        <div class="timestamp">{{ message.sentAt }}</div>
         <div class="user-message">{{ message.content }}</div>
     </div>
    
