--- a/app/templates/username.html
+++ b/app/templates/username.html
@@ -5,9 +5,9 @@
     </div>
     <div class="modal-body">
         <h5 class="modal-prompt">This name will appear when you send messages.</h5>
-            <input type="text" name="input" ng-model="modal.username" required>
+            <input type="text" name="input" ng-model="userInstance.username" required>
     </div>
     <div class="modal-footer">
-        <button class="btn-new" type="button" ng-click="modal.createUsername()" ng-disabled="modal.username == null">Set username</button>
+        <button class="btn-new" type="button" ng-click="userInstance.ok()" >Set username</button>
     </div>
 </section>
