--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -20,6 +20,15 @@
         <div class="timestamp">{{ message.sentAt }}</div>
         <div class="user-message">{{ message.content }}</div>
     </div>
-   
+  
+     <div class="input-bar">
+        <form ng-submit="home.send(home.message, currentRoom)">
+            <div class="input-group animated">
+                <input type="text" class="form-control finderBar" ng-model="home.message" placeholder="Write your message here..." autofocus>
+                <span class="input-group-btn">
+                    <button class="btn btn-default" type="button" ng-click="home.send(home.message, currentRoom)">Send</button>
+                </span>
+            </div>
+        </form>
 </div>
 </div>
