--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -22,11 +22,11 @@
     </div>
   
      <div class="input-bar">
-        <form ng-submit="home.send(home.message, currentRoom)">
+        <form ng-submit="home.send(home.message, home.currentRoom)">
             <div class="input-group animated">
                 <input type="text" class="form-control finderBar" ng-model="home.message" placeholder="Write your message here..." autofocus>
                 <span class="input-group-btn">
-                    <button class="btn btn-default" type="button" ng-click="home.send(home.message, currentRoom)">Send</button>
+                    <button class="btn btn-default" type="button" ng-click="home.send(home.message, home.currentRoom)">Send</button>
                 </span>
             </div>
         </form>
